# P2PClient

./: .gitignore  CMakeLists.txt  README.md  premake5.lua
P2PClient/Include/: P2PClient.h  R.h
P2PClient/Source/: Main.cpp  NetworkStructs.h  P2PClient.h  PeerClient.h  PeerServer.h  R.h  Shared.h
